# gcp_discovery_rust_generator

./: Cargo.toml  README.md
src/: auth.rs  discovery_doc.rs  icons.rs  main.rs  media_upload.rs  method.rs  parameter.rs  property.rs  resource.rs  schema.rs
