[package]
name = "gen"
version = "0.1.0"
authors = ["Laurent Querel <laurent.querel@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8.17"
serde_json = "1.0.63"
serde_with = "1.6.4"
thiserror = "1.0.24"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
Inflector = "0.11.4"

# ToDo should dev dep
assert-json-diff = "2.0.1"